      a simple table; Simple Text - similar to Simple Web, but optimised for
      shell based viewing - useful for monitoring over SSH.
    * Removed redundant "display deadlines in days option". The format is now
      controlled by the old "Display ETA as" option which has been renamed to
      "Display dates as"

v2.3.0 (10/09/07)

    Linux

    * Replaced scons with GNU build system (makes it easier for packagers).
    * Altered image path to now use standard directory (like
      /usr/share/pixmaps/fahmon).
    * Altered message.log location to use ~/.fahmon/
    * Above changes mean FahMon can be run from anywhere on the system without
      worrying about being in the right directory first.
    * Automatically creates Application Menu shortcut using GNU build system.
    * Fixed typo that caused default file manager to be set to "Other" instead
      of "Konqueror" on a fresh install.
    * psummary parser altered to change the decimal point symbol on the fly,
      thus allowing non-english users to display "," instead of "."

    Windows

    * Created new installer using NSIS

    General

    * Documentation altered to fit with GNU build system.
    * Fixed regression that caused FahMon to lose settings on OS shutdown or
      logoff.
    * Added Double Gromacs B (DGROMACSB) core support.
    * Adapted asynchronous client detection to work with updated timezone
      conversion system. Asynchronous clients should no longer appear "hung"
      when "ignore asynchronous clocks" is enabled. This has the potential to
      display the state incorrectly for clients having very long frame times
      (close to 1 day). For the most accurate state detection, client clocks
      should be as in-sync as possible (use NTP).
    * Fixed some items on the preferences dialog that didn't automatically
      refresh the client list when the preferences were applied/saved.
    * The information panel now shows the full PRCG data for the current client