@@ -29,6 +29,7 @@ v2.3.1
     * Removed redundant "display deadlines in days option". The format is now
       controlled by the old "Display ETA as" option which has been renamed to
       "Display dates as"
+    * Added menu item to cycle through ETA display display styles as requested.
 
 v2.3.0 (10/09/07)
 
